--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>Jack Saindon</title>
+<title>About Jack Saindon</title>
 <meta name="description" content="About Jack Saindon.">
 <meta name="keywords" content="HTML,Web,Design,Jack,Saindon,About">
 <meta name="author" content="Jack Saindon">
